fix spelling error in About Me, and hide second image on smaller screen

--- a/css/style.css
+++ b/css/style.css
@@ -332,9 +332,14 @@
 
     .about__img {
         box-shadow: var(--bs);
+        display: none;
     }
 
     @media (min-width: 600px) {
+        .about__img {
+            display: block;
+        }
+
         .section__about {
             display: grid;
             grid-template-columns: 1fr 200px;
